fix: wrong font format

--- a/.vitepress/theme/custom-fonts.css
+++ b/.vitepress/theme/custom-fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'HyperOS Symbols';
-  src: url('/font/HyperOS Symbols.otf') format('opentype');
+  src: url('/font/misymbol_vf-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
